------------------------------------------------------------------------
r1642 | gaser | 2020-06-05 16:11:26

Changed paths:
M       CHANGES.txt
M       cat12.m
M       cat_vol_groupwise_ls.m

(1) Changed: Removed call to previous versions from CAT12 GUI:
(2) Changed: Changed output format for long. data to float32.
------------------------------------------------------------------------
r1641 | gaser | 2020-06-05 14:32:57 +0200 (Fr, 05 Jun 2020) | 14 lines

Changed paths:
M       CHANGES.txt
M       cat_batch_long.m
M       cat_batch_long.sh
M       cat_conf_long.m
M       cat_long_createTPM.m
M       cat_long_multi_run.m
M       cat_vol_groupwise_ls.m

(1) Changed: Added option for longitudinal mode for detecting large changes.
(2) Changed: Updated batch scripts to consider new option for large changes.
(3) Fixed:   Prevent negative values in longitudinal registration after
             intra-subject bias correction.

------------------------------------------------------------------------
r1640 | gaser | 2020-06-04 17:50:51 +0200 (Do, 04 Jun 2020) | 15 lines

Changed paths:
M       CHANGES.txt
M       Contents.m
M       cat_conf_ROI.m
M       cat_conf_long.m
M       cat_conf_output.m
M       cat_conf_stools.m
M       cat_long_main.m
M       cat_long_mainShoot.m
M       cat_long_multi_run.m
M       html/cat.html

(1) Changed: Removed sROI menu from pipeline.
(2) Changed: Added sROI option to extract ROI function for surfaces.

------------------------------------------------------------------------
r1639 | gaser | 2020-06-04 12:47:03 +0200 (Do, 04 Jun 2020) | 9 lines

Changed paths:
M       CHANGES.txt
M       cat_surf_createCS.m
M       tbx_cfg_cat.m

(1) Changed: Check successful loading of previous CAT12 versions and skip GUI
             entries if any problems occur.
(2) Fixed:   Corrected deletion of thickness data if debugging was enabled.

------------------------------------------------------------------------