@@ -409,7 +409,7 @@ h03 = uicontrol(...
   'FontSize',FS,...
   'FontName',get(0,'defaultuicontrolFontName'));
 
-    if expert & 0
+    if expert
       set(h03,...  
       'Style','popupmenu',...
       'Callback','spm(''PopUpCB'',gcbo)',...
@@ -423,9 +423,9 @@ h03 = uicontrol(...
       },...
       'UserData',{...
         'spm_jobman(''interactive'','''',''spm.tools.cat.estwrite'');'...
-        ...'spm_jobman(''interactive'','''',''spm.tools.cat.estwrite1585'');'...
-        'spm_jobman(''interactive'','''',''spm.tools.cat.estwrite1445'');'...
-        'spm_jobman(''interactive'','''',''spm.tools.cat.estwrite1173'');'...
+        ...'spm_jobman(''interactive'','''',''spm.tools.previous.cat.estwrite1585'');'...
+        'spm_jobman(''interactive'','''',''spm.tools.cat.previous.estwrite1445'');'...
+        'spm_jobman(''interactive'','''',''spm.tools.cat.previous.estwrite1173'');'...
       });
     else
         set(h03,...  
@@ -448,7 +448,7 @@ h04 = uicontrol(...
   'FontSize',FS,...
   'FontName',get(0,'defaultuicontrolFontName'));
 
-  if expert & 0
+  if expert
     set(h04,...  
       'Style','popupmenu',...
       'Callback','spm(''PopUpCB'',gcbo)',...
@@ -461,8 +461,8 @@ h04 = uicontrol(...
       },...
       'UserData',{...
         'spm_jobman(''interactive'','''',''spm.tools.cat.long'');'...
-        'spm_jobman(''interactive'','''',''spm.tools.cat.long1445'');'...
-        'spm_jobman(''interactive'','''',''spm.tools.cat.long1173'');'...
+        'spm_jobman(''interactive'','''',''spm.tools.cat.previouslong.long1445'');'...
+        'spm_jobman(''interactive'','''',''spm.tools.cat.previouslong.long1173'');'...
       });
   else
     set(h04,...  
