@@ -1,5 +1,14 @@
 ------------------------------------------------------------------------
-r1642 | gaser | 2020-06-05 16:11:26
+r1643 | gaser | 2020-06-05 16:16:43
+
+Changed paths:
+M       CHANGES.txt
+M       cat12.m
+
+Changed: Again added (corrected) call to previous versions from CAT12 GUI
+
+------------------------------------------------------------------------
+r1642 | gaser | 2020-06-05 16:12:03 +0200 (Fr, 05 Jun 2020) | 8 lines
 
 Changed paths:
 M       CHANGES.txt
@@ -8,6 +17,7 @@ M       cat_vol_groupwise_ls.m
 
 (1) Changed: Removed call to previous versions from CAT12 GUI:
 (2) Changed: Changed output format for long. data to float32.
+
 ------------------------------------------------------------------------
 r1641 | gaser | 2020-06-05 14:32:57 +0200 (Fr, 05 Jun 2020) | 14 lines
 
